tests/should-fail/rawcodelit-20.j
globals
integer i4 = '\
'
endglobals